--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>secretsmanager</artifactId>
+			<version>2.23.16</version>
+		</dependency>
 	</dependencies>
 
 	<build>
